--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script defer src="javascript.js"></script>
 </head>
 <body>
-    <script src="javascript.js"></script>
+    <button class = "button" id ="rock">Rock</button>
+    <button class = "button" id="paper">Paper</button>
+    <button class = "button" id="scissors">Scissors</button>
+    <button class = "button" id="reset">Reset Game</button>
+    <div>Results</div>
 </body>
 </html>
